# basler_camera

./: LICENSE  README.md  continuo.py  pyproject.toml  seriais.py  teste.ipynb
scr/: basler_camera.py  continuo.py  seriais.py  utils.py
